Adds support for metrics